bridges/jac-bridge/tests/ui/unsupported_option_return.stderr
error: unsupported Option return: only Option<&OpaqueType>, Option<String>, and Option<Vec<u8>> can signal None in-band
  --> tests/ui/unsupported_option_return.rs:11:30
   |
11 |         pub fn bad(&self) -> Option<bool> {
   |                              ^^^^^^
